[package]
edition = "2021"
name = "ppl"
description = "A structured parallel programming library for Rust."
version = "0.1.1"
authors = ["Valerio Besozzi"]
license = "MIT OR Apache-2.0"


[features]
default = ["crossbeam"]
flume = ["dep:flume"]
crossbeam = ["crossbeam-channel"]
ff = ["ff_buffer"]
kanal = ["dep:kanal"]

[profile.release]
debug = false

[dependencies]
core_affinity = "0.8.1"
crossbeam-channel = { version = "0.5.8", optional = true }
crossbeam-deque = "0.8.3"
dyn-clone = "1.0.12"
log = "0.4.20"
num_cpus = "1.16.0"
ff_buffer = { git = "https://github.com/valebes/ppl-ff-buffer", optional = true }
kanal = { git = "https://github.com/fereidani/kanal.git", optional = true }
flume = { version = "0.11.0", optional = true }

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}
crossbeam-channel = { version = "0.5.8"}
env_logger = "0.10.0"
rand = "0.8.5"
raster = {git = "https://github.com/valebes/raster.git"}
rayon = "1.7.0"
rust-spp = {git = "https://github.com/GMAP/rust-ssp.git"}
num_cpus = "1.16.0"
serial_test = "2.0.0"
scopeguard = "1.2.0"
image = "0.24.6"
num-complex = "0.4.4"

[[bench]]
harness = false
name = "main"
