[package]
edition = "2021"
name = "ppl"
description = "A structured parallel programming library for Rust."
version = "0.1.5"
authors = ["Valerio Besozzi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/valebes/ppl"
readme = "README.md"
homepage = "https://github.com/valebes/ppl"



[features]
default = ["crossbeam"]
flume = ["dep:flume"]
crossbeam = ["crossbeam-channel"]
ff = ["ff_buffer"]
kanal = ["dep:kanal"]

[profile.release]
debug = false

[dependencies]
core_affinity = "0.8.1"
crossbeam-channel = { version = "0.5.13", optional = true }
crossbeam-deque = "0.8.5"
dyn-clone = "1.0.17"
log = "0.4.22"
num_cpus = "1.16.0"
ff_buffer = { version = "0.1.0", optional = true }
kanal = { version = "0.1.0-pre8", optional = true }
flume = { version = "0.11.0", optional = true }

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}
crossbeam-channel = { version = "0.5.13"}
env_logger = "0.11.5"
rand = "0.8.5"
raster = {git = "https://github.com/valebes/raster.git"}
rayon = "1.10.0"
rust-spp = {git = "https://github.com/GMAP/rust-ssp.git"}
num_cpus = "1.16.0"
serial_test = "3.1.1"
scopeguard = "1.2.0"
image = "0.25.5"
num-complex = "0.4.6"

[[bench]]
harness = false
name = "main"
